z-index issue fixed

--- a/about.css
+++ b/about.css
@@ -30,6 +30,7 @@ header {
     position: sticky;
     top: 0;
     font-size: 1.2rem;
+    z-index: 100;
 }
 
 nav {
